--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,12 @@
   font-family: Arial, Helvetica, sans-serif;
   color: hsla(0, 0%, 50%);
 }
+
+.button {
+  background-color: hsl(200, 100%, 50%);
+  color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+}
